--- a/app/src/main/res/drawable/ic_love_selector.xml
+++ b/app/src/main/res/drawable/ic_love_selector.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android" android:exitFadeDuration="@android:integer/config_mediumAnimTime">
     <item android:drawable="@drawable/ic_love_false" android:state_checked="false" />
-    <item android:drawable="@drawable/ic_love" android:state_checked="true" />
+    <item android:drawable="@drawable/ic_love_true" android:state_checked="true" />
 </selector>
